전체 컨텐츠 정렬 수정 중

--- a/assets/02-css/01-cssStart/01-css_intro.html
+++ b/assets/02-css/01-cssStart/01-css_intro.html
@@ -23,7 +23,7 @@
 		</p>
 	</blockquote>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xxl">
 		<!--<h2 class="sound_only">의미 설명</h2>-->
 		<h2>CSS를, </h2>
 
