--- a/assets/02-css/01-cssStart/06-css_apply.html
+++ b/assets/02-css/01-cssStart/06-css_apply.html
@@ -9,9 +9,9 @@
 		<h2>HTML 문서에 CSS 스타일을 선언할 때 사용하는 네 가지 방법</h2>
 
 		<!-- 인라인 스타일(Inline style) -->
-		<article class="indent_max mt_m">
+		<article class="indent_max mt_l">
 			<h3 class="ml_mn">인라인 스타일(Inline style)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				HTML 요소에 직접 style 속성값을 지정하는 방법을 말합니다.<br>
 				이러한 인라인 스타일은 해당 요소에만 스타일을 적용할 수 있습니다.<br>
 				이 방식은 한 번 설정된 스타일을 변경하기가 매우 어려우며, 스타일 시트를 사용하는 많은 이점을 잃게 됩니다.<br>
@@ -29,9 +29,9 @@
 		</article>
 
 		<!-- 내부 스타일(Internal style) -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn">내부 스타일(Internal style)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				내부 스타일 시트를 이용하는 방법은 HTML 문서 내의 <code>&lt;head&gt;</code> 요소에 <code>&lt;style&gt;</code> 요소를 사용하여 CSS 스타일을 적용합니다.<br>
 				head 요소에 넣는 것이 정석이지만, 상황에 따라 body 요소 안에도 선언이 가능합니다.<br>
 				HTML5.2 권고안(2017년 12월 14일 발표)에 따르면 <code>&lt;body&gt;</code> 안에 <code>&lt;style&gt;</code> 사용 가능하다고 명시됩니다.<br>
@@ -50,9 +50,9 @@
 		</article>
 
 		<!-- 외부 스타일(External style)[권장방식] -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn">외부 스타일(External style) <span class="t_red">[권장방식]</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;link&gt;</code> 요소로 외부 CSS 불러오는 방식입니다.<br>
 				외부 스타일 시트를 이용하는 방법은 웹 사이트 전체의 스타일을 하나의 파일에서 변경할 수 있도록 해줍니다.<br>
 				외부에 작성된 이러한 스타일 시트 파일은 .css 확장자를 사용하여 저장됩니다.<br>
@@ -70,9 +70,9 @@
 		</article>
 
 		<!-- at-rule 임포트 스타일 시트(@import style) -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn">at-rule 임포트 스타일 시트(@import style)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				Internal 또는 External 방식으로 링크된 CSS 안에 또 다른 CSS를 @import를 통해 불러오는 방식입니다.<br>
 				사용하는 방식은 @import url('css경로'); 으로 css파일을 불러들이는 방식으로 적용됩니다.<br>
 				이 방식은 CSS 적용을 하기 전 CSS 문서의 최상위에 위치해서 불러들여야 합니다.<br>
