--- a/assets/02-css/01-cssStart/07-css_cascading.html
+++ b/assets/02-css/01-cssStart/07-css_cascading.html
@@ -8,7 +8,7 @@
 	<!-- 상속(Inheritance) -->
 	<section class="txt_ex mt_xxl">
 		<h2>상속(Inheritance)</h2>
-		<p class="indent">
+		<p class="indent mt_ms">
 			'상속'이란 하위 요소(자식, 자손)가 상위 요소(부모, 조상)로부터 특정 CSS 속성을 물려받는 것을 의미합니다.<br>
 			상속의 개념이 없다면 글꼴, 글씨크기, 글색상 같은 스타일 속성들을 모든 요소마다 각각 지정해줘야 할 것입니다.<br>
 			그러므로 상속은 CSS에서 생산성을 높이기 위한 중요한 기능입니다.<br>
@@ -74,9 +74,9 @@
 	</section>
 
 	<!-- 캐스케이딩(Cascading) -->
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xl">
 		<h2>캐스케이딩(Cascading)</h2>
-		<p class="indent">
+		<p class="indent mt_ms">
 			'캐스케이딩'은 하나의 요소에 여러 속성들을 선언할 때 생기는 충돌을 피하는 규칙을 말합니다.
 		</p>
 		<div class="ol_lst indent mt_s">
@@ -90,9 +90,9 @@
 	</section>
 
 	<!-- 중요도 -->
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xl">
 		<h2>중요도</h2>
-		<p class="indent">
+		<p class="indent mt_ms">
 			CSS 선언의 중요도는, 그것이 '어디'에서 사용되었는지에 따라 다릅니다. 다음의 순서대로, 나중 선언이 앞선 선언을 덮어 쓰고 요소에 적용됩니다.<br>
 			CSS 속성을 줄 때 <code>!important</code>를 뒤에 붙이면 우선순위가 가장 높아집니다.
 		</p>
@@ -108,9 +108,9 @@
 	</section>
 
 	<!-- 명시도 -->
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xl">
 		<h2>명시도</h2>
-		<p class="indent">
+		<p class="indent mt_ms">
 			명시도란 규칙의 선택자가 얼마나 명확하게 요소를 지정하고 있는지 측정한 것입니다.<br>
 			명시도가 낮은 선택자는 넓은 범위의 요소들에 적용될 것이며, 명시도가 높은 선택자는 페이지의 단 하나의 요소만 선택하고 있을 수도 있습니다.
 		</p>
@@ -125,9 +125,9 @@
 	</section>
 
 	<!-- 코드의 순서 -->
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xl">
 		<h2>코드의 순서</h2>
-		<p class="indent">
+		<p class="indent mt_ms">
 			하나의 요소를 가리키는 선언이 두 개 있고, 두 선언의 중요도와 명시도가 모두 같다면, 나중에 나온 선언을 선택하게 됩니다.
 		</p>
 	</section>
