--- a/assets/02-css/02-cssBeginner/01-css_units.html
+++ b/assets/02-css/02-cssBeginner/01-css_units.html
@@ -27,7 +27,7 @@
 	<!-- 2.1.1. 상대 길이 단위 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">2.1.1. 상대 길이 단위</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			상대 길이 단위(em, rem, ch, ex, vw, vh, vmin, vmax) : 어떤 기준을 통해 상대적으로 변할 수 있는 단위이며, 다양한 매체에 쓰기 적절합니다.<br>
 			상대 길이 단위란 다른 길이에 상대적인 길이를 말하는데, 글꼴에 상대적인 길이가 있고, 브라우저 창(viewport)에 상대적인 길이가 있습니다.<br>
 			상대 단위를 사용하면 브라우저 환경에 따라 좀 더 쉽게 크기 조절이 가능하다는 장점이 있지만, 계산하기 복잡하다는 단점이 있습니다.<br>
@@ -38,10 +38,10 @@
 		<!-- 글꼴에 상대적인 길이(Font-relative Lengths) -->
 		<article class="mt_l">
 			<h3>글꼴에 상대적인 길이(Font-relative Lengths)</h3>
-			<div class="ol_lst indent mt_sm">
+			<div class="ol_lst indent">
 				<ol>
 					<!-- em 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">em 단위</h4>
 						<blockquote class="uk_note mt_ms" role="note">
 							<h4 class="sound_only">요약 설명</h4>
@@ -81,7 +81,7 @@
 					</li>
 
 					<!-- rem 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">rem 단위</h4>
 						<blockquote class="uk_note mt_ms" role="note">
 							<h4 class="sound_only">요약 설명</h4>
@@ -125,7 +125,7 @@
 					</li>
 
 					<!-- ex 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">ex 단위</h4>
 						<div class="line_code mt_ms">
 							<p>요소 font의 x 높이를 나타냅니다. &quot;x&quot;문자를 가진 글꼴에서는 보통 소문자 높이와 같습니다. 많은 글꼴에서 1ex ≈ 0.5em입니다.</p>
@@ -134,7 +134,7 @@
 					</li>
 
 					<!-- ch 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">ch 단위</h4>
 						<div class="line_code mt_ms">
 							<p>요소 font의 문자 &quot;0&quot;(영, 유니코드 U+0030)의 너비를 나타냅니다.</p>
@@ -146,12 +146,12 @@
 		</article>
 
 		<!-- 브라우저 창(viewport)에 비례한 길이(뷰포트 백분율 길이) -->
-		<article class="mt_l">
+		<article class="mt_xl">
 			<h3>브라우저 창(viewport)에 비례한 길이(뷰포트 백분율 길이)</h3>
-			<div class="ol_lst indent mt_sm">
+			<div class="ol_lst indent">
 				<ol>
 					<!-- vw 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">vw 단위</h4>
 						<div class="line_code mt_ms">
 							<p>뷰포트의 초기 컨테이닝 블록 너비 1%와 같습니다.</p>
@@ -160,7 +160,7 @@
 					</li>
 
 					<!-- vh 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">vh 단위</h4>
 						<div class="line_code mt_ms">
 							<p>뷰포트의 초기 컨테이닝 블록 높이 1%와 같습니다.</p>
@@ -169,7 +169,7 @@
 					</li>
 
 					<!-- vmin 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">vmin 단위</h4>
 						<div class="line_code mt_ms">
 							<p>vw와 vh 중 작은 것과 같습니다.</p>
@@ -178,7 +178,7 @@
 					</li>
 
 					<!-- vmax 단위 -->
-					<li class="line_code tit_h4 before_blue mt_m">
+					<li class="line_code tit_h4 before_blue mt_l">
 						<h4 class="t_blue">vmax 단위</h4>
 						<div class="line_code mt_ms">
 							<p>vw와 vh 중 큰 것과 같습니다.</p>
@@ -193,7 +193,7 @@
 	<!-- 2.1.2. 절대 길이 단위 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">2.1.2. 절대 길이 단위</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			절대 길이 단위(px, mm, cm, in, pt, pc) : 정확한 기준에 의해 고정된 단위입니다.<br>
 			절대 길이 단위는 프린트 등 출력 수단의 크기를 알 수 있을 때의 물리적 측정 거리를 나타냅니다.<br>
 			구현은 어떤 단위를 물리적인 실제 거리에 맞춰 기준으로 삼고, 나머지 단위를 상대적으로 계산해 설정합니다.<br>
@@ -301,7 +301,7 @@
 	<!-- 2.1.4. 색상 표현 단위 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">2.1.4. 색상 표현 단위</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			색상을 지정하는 모든 요소에 사용됩니다.<br>
 			CSS속성에서 대표적인 예로 color, background-color, border-color에 사용됩니다.<br>
 			색상를 표현할 수 있는 키워드 리스트는 <span class="reference"><a href="https://www.w3.org/TR/css-color-3/" target="_blank" title="새창열림">W3C css3-color</a></span>를 참고하시기 바랍니다.<br>
@@ -507,7 +507,7 @@
 	<!-- 2.1.5. opacity 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">2.1.5. opacity 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			요소의 불투명도를 설정합니다. 불투명도는 요소 뒤쪽 콘텐츠가 숨겨지는 정도로, 투명도의 반대입니다.<br>
 			opacity는 요소의 내용을 포함해 모든 곳에 영향을 주지만 자식 요소가 상속하지는 않습니다.<br>
 			따라서 요소와 자식의 투명도가 서로 다르더라도 배경에 대해서는 상대적으로 같은 투명도를 갖습니다.<br>
