--- a/assets/02-css/02-cssBeginner/03-css_color.html
+++ b/assets/02-css/02-cssBeginner/03-css_color.html
@@ -26,7 +26,7 @@
 		</p>
 	</blockquote>
 	<p class="mt_m">
-		color의 기본값은 inherit으로 부모의 색상을 가져옵니다.<br>
+		color의 기본값은 <code>inherit</code>으로 부모의 색상을 가져옵니다.<br>
 	</p>
 	<div class="uk_gist_code_box mt_ms" data-tit="color CSS value">
 		<textarea readonly="readonly">
@@ -39,8 +39,14 @@
 	<!-- color 키워드 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">color 키워드</h2>
-		<p class="mt_s">
-			color 키워드는 대소문자를 구분하지 않는 식별자로, red, blue, black, lightseagreen처럼 특정 색을 나타냅니다.<br>
+		<p class="mt_ms">
+			color 키워드는 대소문자를 구분하지 않는 식별자로
+			<span style="color:red">red</span>,
+			<span style="color:blue">blue</span>,
+			<span style="color:black">black</span>,
+			<span style="color:lightseagreen">lightseagreen</span>
+			처럼 특정 색을 나타냅니다.
+			<br>
 			이름이 표현하는 색을 그럭저럭 가리키고 있긴 하지만 모든 키워드의 본질은 인위적이며 어떤 특정한 규칙을 따르거나 하지 않습니다.
 		</p>
 		<div class="ol_lst mt_m">
@@ -59,23 +65,34 @@
 				</li>
 				<li class="mt_sm">
 					어떤 키워드는 다른 키워드의 다른 이름입니다.<br>
-					aqua / cyan<br>
-					fuchsia / magenta<br>
-					darkgray / darkgrey<br>
-					darkslategray / darkslategrey<br>
-					dimgray / dimgrey<br>
-					lightgray / lightgrey<br>
-					lightslategray / lightslategrey<br>
-					gray / grey<br>
-					slategray / slategrey
+					<div class="color_keyword_ex">
+						<span style="background:aqua; color:#000;">aqua</span> /
+						<span style="background:cyan; color:#000;">cyan</span><br>
+						<span style="background:fuchsia; color:#fff;">fuchsia</span> /
+						<span style="background:magenta; color:#fff;">magenta</span><br>
+						<span style="background:darkgray; color:#fff;">darkgray</span> /
+						<span style="background:darkgrey; color:#fff;">darkgrey</span><br>
+						<span style="background:darkslategray; color:#fff;">darkslategray</span> /
+						<span style="background:darkslategrey; color:#fff;">darkslategrey</span><br>
+						<span style="background:dimgray; color:#fff;">dimgray</span> /
+						<span style="background:dimgrey; color:#fff;">dimgrey</span><br>
+						<span style="background:lightgray; color:#000;">lightgray</span> /
+						<span style="background:lightgrey; color:#000;">lightgrey</span><br>
+						<span style="background:lightslategray; color:#fff;">lightslategray</span> /
+						<span style="background:lightslategrey; color:#fff;">lightslategrey</span><br>
+						<span style="background:gray; color:#fff;">gray</span> /
+						<span style="background:grey; color:#fff;">grey</span><br>
+						<span style="background:slategray; color:#fff;">slategray</span> /
+						<span style="background:slategrey; color:#fff;">slategrey</span>
+					</div>
 				</li>
 			</ol>
-			<div class="uk_gist_code_box mt_ms" data-tit="color : keyword">
-				<textarea readonly="readonly">
-					p {color: red;}
-					p {color: blue;}
-				</textarea>
-			</div>
+		</div>
+		<div class="uk_gist_code_box mt_m" data-tit="color : keyword">
+			<textarea readonly="readonly">
+				p {color: red;}
+				p {color: blue;}
+			</textarea>
 		</div>
 		<aside class="browser_support mt_m" data-tit="color">
 			<ul>
@@ -92,9 +109,9 @@
 	<!-- RGB 색상 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">RGB 색상</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			RGB 색상 모델은 빨강, 초록, 파랑을 통해 특정 색을 표현합니다. 선택사항으로 색의 투명도를 알파 채널로 표현할 수 있습니다.<br>
-			RGB 색상은 # 뒤의 16진수 표기법이나 함수형 표기법(rgb(), rgba())으로 표현할 수 있습니다.
+			RGB 색상은 # 뒤의 16진수 표기법이나 함수형 표기법(<code>rgb()</code>, <code>rgba()</code>)으로 표현할 수 있습니다.
 		</p>
 		<div class="ol_lst indent mt_m">
 			<ol>
@@ -153,20 +170,20 @@
 	<!-- HSL 색상 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">HSL 색상</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			HSL 색상 모델은 색상, 채도, 명도를 통해 특정 색상을 표현합니다. 선택사항으로 색의 투명도를 알파 채널로 표현할 수 있습니다.<br>
 			많은 디자이너들은 색상, 채도, 명도를 따로 조절할 수 있는 HSL이 RGB보다 더 직관적임을 발견합니다.<br>
 			또한 HSL을 사용하면 짝이 맞는 색(예컨대 한 가지 색의 여러 밝기) 여러 종류를 더 쉽게 만들 수 있습니다.<br>
-			HSL 색상은 함수형 hsl()과 hsla() 표기법을 사용합니다.
+			HSL 색상은 함수형 <code>hsl()</code>과 <code>hsla()</code> 표기법을 사용합니다.
 		</p>
 		<p class="mt_s">
-			참고: CSS Colors Level 4부터 hsla()는 hsl()의 다른 이름입니다. Level 4 표준을 구현한 브라우저에서는 같은 매개변수를 받고 동일하게 행동합니다.
+			참고: CSS Colors Level 4부터 <code>hsla()</code>는 <code>hsl()</code>의 다른 이름입니다. Level 4 표준을 구현한 브라우저에서는 같은 매개변수를 받고 동일하게 행동합니다.
 		</p>
 		<div class="ol_lst indent mt_m">
 			<ol>
 				<li class="line_code font14">
 					<strong>함수형 표기법(콤마 구분)</strong>
-					<p class="mt_sm">hsl(H, S, L[, A]) 또는 hsla(H, S, L, A)</p>
+					<p class="mt_sm"><code>hsl(H, S, L[, A])</code> 또는 <code>hsla(H, S, L, A)</code></p>
 					<p>
 						H(색상)은 색상원에서의 <code>&lt;angle&gt;</code>로 CSS Color Module Level 4 기준 deg, rad, grad, turn을 사용할 수 있습니다.<br>
 						단위 없이 <code>&lt;number&gt;</code>로 표현할 경우 CSS Color Module Level 3에 명시된 것과 같이 각도로 해석합니다.<br>
@@ -181,7 +198,7 @@
 				</li>
 				<li class="line_code font14 mt_s">
 					<strong>함수형 표기법(공백 구분)</strong>
-					<p class="mt_sm">hsl(H S L[ A]) 또는 hsla(H S L A)</p>
+					<p class="mt_sm"><code>hsl(H S L[ A])</code> 또는 <code>hsla(H S L A)</code></p>
 					<p>CSS Colors Level 4부터 공백으로 구분한 값을 함수형 표기법과 사용할 수 있습니다.</p>
 				</li>
 			</ol>
@@ -219,10 +236,10 @@
 	<!-- transparent 키워드 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn css3">transparent 키워드</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			CSS3 속성<br>
-			transparent 키워드는 완전히 투명한 색으로, "색"을 입힌 항목의 뒷편이 모두 보입니다.<br>
-			transparent = rgba(0,0,0,0) 와 같습니다.
+			<code>transparent</code> 키워드는 완전히 투명한 색으로, "색"을 입힌 항목의 뒷편이 모두 보입니다.<br>
+			<code>transparent</code> = <code>rgba(0,0,0,0)</code> 와 같습니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="color : transparent">
 			<textarea readonly="readonly">
@@ -244,7 +261,7 @@
 	<!-- currentColor 키워드 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn css3">currentColor 키워드</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			CSS3 속성<br>
 			currentColor 키워드는 요소의 color 속성값을 나타냅니다. 이를 통해 다른 속성이 color 속성값을 따라가도록 설정할 수 있습니다.<br>
 			color 속성의 값으로 currentColor 키워드를 사용하면, 값을 상속받은 color 속성에서 대신 가져옵니다.<br>
@@ -260,7 +277,7 @@
 		</div>
 	</section>
 
-	<section class="reference_box mt_l">
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">Color 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/css-color-3/" target="_blank" class="fas" title="새창열림">CSS Color Module Level 3</a></li>
