--- a/assets/02-css/02-cssBeginner/04-css_font.html
+++ b/assets/02-css/02-cssBeginner/04-css_font.html
@@ -15,20 +15,22 @@
 	<!-- font-family 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">font-family</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			폰트를 지정합니다. 컴퓨터에 해당 폰트가 설치되어 있지 않으면 적용되지 않습니다.<br>
-			font-family 속성은 하나의 글꼴만을 설정할 수도 있고, 여러 개의 글꼴을 같이 설정할 수도 있습니다.<br>
-			font-family 속성값이 여러 개의 글꼴로 설정되어 있으면, 웹 브라우저는 앞에서부터 순서대로 글꼴을 읽어 들입니다.<br>
+			<code>font-family</code> 속성은 하나의 글꼴만을 설정할 수도 있고, 여러 개의 글꼴을 같이 설정할 수도 있습니다.<br>
+			<code>font-family</code> 속성값이 여러 개의 글꼴로 설정되어 있으면, 웹 브라우저는 앞에서부터 순서대로 글꼴을 읽어 들입니다.<br>
 			만약 사용자의 컴퓨터에 첫 번째로 읽어 들인 글꼴이 없으면 다음 글꼴을 확인하게 됩니다.<br>
 			이런 방식으로 계속해서 읽어 들인 글꼴이 존재하는지를 확인하여, 읽어 들인 글꼴이 사용자의 컴퓨터에 존재하면 해당 글꼴로 표시하게 됩니다.<br>
 			글꼴의 이름이 한 단어 이상으로 이루어지면 반드시 따옴표를 사용하여 둘러 쌓아야 합니다.<br>
 			또한, 여러 개의 글꼴을 나열할 때에는 쉼표(,)로 구분 짓습니다.
 		</p>
-		<p class="mt_s">
-			CSS에는 두 가지의 글꼴 집합(font family)이 존재합니다.<br>
-			generic family : 비슷한 모양을 가지는 글꼴 집합 ("Serif", "Monospace" 등)<br>
-			font family : 특정 글꼴 집합 ("Times", "Courier" 등)
-		</p>
+		<div class="mt_s">
+			<strong class="t_black">CSS에는 두 가지의 글꼴 집합(font family)이 존재합니다.</strong><br>
+			<div class="indent">
+				<i class="t_black">generic family</i> : 비슷한 모양을 가지는 글꼴 집합 (<code>Serif</code>, <code>Sans Serif</code>, <code>Display</code>, <code>Handwriting</code>, <code>Monospace</code> 등)<br>
+				<i class="t_black">font family</i> : 특정 글꼴 집합 (<code>"Roboto"</code>, <code>"Noto Sans KR"</code>, <code>"Nanum Gothic"</code> 등)
+			</div>
+		</div>
 		<div class="uk_gist_code_box mt_ms" data-tit="font-family">
 			<textarea readonly="readonly">
 				p {
@@ -44,7 +46,7 @@
 	<!-- font-style 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">font-style</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			font-style 속성은 주로 이탤릭체를 사용하기 위해 사용하며, 다음과 같이 4가지의 속성값을 가집니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="font-style">
@@ -54,12 +56,12 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 텍스트에 어떠한 스타일도 적용하지 않습니다.</li>
 				<li><strong class="t_black">italic</strong> : 텍스트를 이탤릭체로 나타냅니다.</li>
 				<li><strong class="t_black">oblique</strong> : 비스듬한(oblique) 모양으로 지정한다. 이 속성값은 italic과 매우 유사하지만 지원하는 웹 브라우저가 거의 없습니다.</li>
-				<li><strong class="t_black">inherit</strong> : 부모 요소로부터 값을 상속 받는다.</li>
+				<li><strong class="t_black">inherit</strong> : 부모 요소로부터 값을 상속 받습니다.</li>
 			</ol>
 		</div>
 	</section>
@@ -67,7 +69,7 @@
 	<!-- font-size 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">font-size</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			font-size 속성은 텍스트의 크기를 설정합니다.<br>
 			웹 디자인에서 텍스트의 크기는 매우 중요한 표현 요소입니다.<br>
 			하지만 제목을 표현하기 위해서 텍스트의 크기만을 크게 해서는 안 됩니다.<br>
@@ -86,7 +88,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">length(길이)</strong> : 부동 소수점 숫자 뒤에 절대 단위 지정자( cm , mm , in , pt , pc ) 또는 상대 단위 지정자( em , ex , px )가 오는 값을 지정한다.</li>
 				<li><strong class="t_black">%(퍼센트)</strong> : 퍼센트 부호(%)가 뒤에 오는 정수를 지정한다.</li>
@@ -99,7 +101,7 @@
 	<!-- font-weight 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">font-weight</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			글꼴의 두께를 지정합니다.<br>
 			font-weight 속성은 텍스트를 얼마나 두껍게 표현할지를 설정합니다.<br>
 			사용할 수 있는 속성값에는 lighter, normal, bold, bolder 등이 있습니다.<br>
@@ -112,7 +114,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 보통 두께를 지정한다.</li>
 				<li><strong class="t_black">bold</strong> : 굵은 글꼴을 지정한다.</li>
@@ -126,7 +128,7 @@
 	<!-- font-variant 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">font-variant</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			글꼴을 작은 대문자로 지정합니다.<br>
 			font-variant 속성은 속성값이 small-caps로 설정되면, 텍스트에 포함된 영문자 중 모든 소문자를 작은 대문자(small-caps) 글꼴로 변경시킵니다.<br>
 			이때 영문자 중 대문자는 기존 크기 그대로 출력합니다.<br>
@@ -142,7 +144,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 보통 글꼴을 지정한다.</li>
 				<li><strong class="t_black">small-caps</strong> : 작은 대문자 글꼴을 지정한다.</li>
@@ -154,7 +156,7 @@
 	<!-- font-stretch 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn css3"><i class="t_blue">font-stretch</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			CSS3에 추가된 속성입니다.<br>
 			글자의 폭을 넓게(wide) 늘이거나 좁게(narrow) 축소합니다. 즉 글자의 폭(너비)에 대해서 설정하는 속성입니다.<br>
 			font-stretch 속성은 처음에 CSS2에서 정의되었지만 브라우저 구현 부족으로 인해 CSS2.1에서 삭제되고 CSS3로 다시 정의되었습니다.
@@ -166,7 +168,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">ultra-condensed</strong> : 할수있는 한 폭을 좁힌다.</li>
 				<li><strong class="t_black">extra-condensed</strong> : condensed 보다 좁지만, ultra-condensed 보다 폭을 좁히진 않는다.</li>
@@ -200,7 +202,7 @@
 	<!-- font-size-adjust 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn css3"><i class="t_blue">font-size-adjust</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			대문자가 아닌 소문자의 높이에 따라 선택되는 방법.<br>
 			작은 크기에서 글꼴의 가독성이 대문자의 크기보다 소문자의 크기에 의해 결정되므로 유용합니다.<br>
 			소문자 (글꼴의 x 높이에 의해 결정됨)<br>
@@ -222,7 +224,7 @@
 				/* (0.5 × 14px) = 14px */
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">nubmer(숫자)</strong> : 사용할 비율을 지정한다.</li>
 				<li><strong class="t_black">none</strong> : 기본값으로 글꼴 크기를 변경하지 않는다.</li>
@@ -249,7 +251,7 @@
 	<!-- line-height 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">line-height</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			line-height 속성은 텍스트의 줄 간격을 설정합니다.<br>
 			line-height 속성은 font의 축약형 방식으로 사용할 때 font-size/line-height 형식으로 같이 사용됩니다.
 		</p>
@@ -268,7 +270,7 @@
 	<!-- 축약형 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">축약형</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			font 속성을 축약형(Shorthand font property) 방식으로 사용합니다. 모든 font 속성을 한번에 사용할 수 있습니다.<br>
 			축약형 방식으로 사용할 때는 line-height 속성도 같이 사용 가능합니다.
 		</p>
@@ -297,7 +299,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="css/step01/2.4.font/2.4.font.html">
+	<section class="view_editor edit_code mt_xxl" data-target="css/step01/2.4.font/2.4.font.html">
 		<h3 class="ve_tit">예제</h3>
 		<div class="uk_editor indent min-height-800" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
@@ -309,7 +311,7 @@
 		<figcaption>[Typography 예시]</figcaption>
 	</figure>
 
-	<aside class="browser_support mt_l" data-tit="font">
+	<aside class="browser_support mt_xxl" data-tit="font">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">12.0</li>
@@ -320,7 +322,7 @@
 		</ul>
 	</aside>
 
-	<section class="reference_box mt_l">
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">Font 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/CSS2/fonts.html" target="_blank" class="fas" title="새창열림">W3C Font</a></li>
