--- a/assets/02-css/02-cssBeginner/06-css_background.html
+++ b/assets/02-css/02-cssBeginner/06-css_background.html
@@ -22,7 +22,7 @@
 	<!-- background-color 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background</i> 각 속성의 기본 값</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			background의 기본값은 다음과 같습니다.<br>
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="background default value">
@@ -44,7 +44,7 @@
 	<!-- background-color 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-color</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			배경의 색을 정합니다. 그 색으로 border와 padding을 포함한 영역을 칠합니다. margin 영역은 칠하지 않습니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="background-color">
@@ -54,7 +54,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">transparent</strong> : 기본값으로 배경색이 없습니다(투명).</li>
 				<li><strong class="t_black">color</strong> : 색을 정합니다.</li>
@@ -70,7 +70,7 @@
 	<!-- background-image 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-image</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			이미지를 배경으로 사용하게 하는 속성입니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="background-image">
@@ -80,7 +80,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 기본값으로 이미지를 배경으로 사용하지 않습니다.</li>
 				<li><strong class="t_black">url</strong> : 이미지의 URL을 입력합니다.</li>
@@ -96,7 +96,7 @@
 	<!-- background-repeat 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-repeat</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			배경 이미지의 반복을 지정합니다. 수직, 수평 또는 수직과 수평 모두의 반복을 지정할 수 있습니다.<br>
 			설정된 이미지의 크기가 화면보다 작으면 자동으로 이미지가 반복 출력되어 화면을 채우게 됩니다.<br>
 			이것은 background-repeat 프로퍼티의 기본값이 repeat이기 때문입니다.<br>
@@ -112,7 +112,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">repeat</strong> : 기본값으로 가로 방향, 세로 방향으로 반복합니다. 값이 없어도 기본이 repeat 됨.</li>
 				<li><strong class="t_black">repeat-x</strong> : 가로 방향으로 반복합니다.</li>
@@ -130,7 +130,7 @@
 	<!-- background-position 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-position</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			배경 이미지의 위치를 정하는 속성입니다.<br>
 			가로 위치/세로 위치를 축약형 방식으로 사용할 수 있습니다.<br>
 			background-position의 기준은 항상 좌측 상단부터 시작합니다.<br>
@@ -143,7 +143,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li class="line_code font14">
 					<strong class="t_black">position-x position-y</strong> : 가로 위치(left, center, right, 백분율, 길이)와 세로 위치(top, center, bottom, 백분율, 길이)를 정합니다.
@@ -178,7 +178,7 @@
 	<!-- background-attachment 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-attachment</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			배경 이미지의 스크롤 여부를 정합니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="background-attachment">
@@ -188,7 +188,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">scroll</strong> : 기본값으로 배경은 요소 자체에 상대적으로 고정되며 내용과 함께 스크롤되지 않습니다.</li>
 				<li><strong class="t_black">fixed</strong> : 배경은 뷰포트를 기준으로 고정됩니다. 요소에 스크롤이 있어도 배경은 요소와 함께 움직이지 않습니다.</li>
@@ -205,7 +205,7 @@
 	<!-- background-size 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-size</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			배경 이미지의 가로 크기와 세로 크기를 정할 수 있습니다.<br>
 			백분율로 크기를 정할 때의 기준은 이미지 크기가 아니라 배경을 사용하는 요소의 크기입니다.<br>
 			배경 이미지의 사이즈를 지정. 배경 이미지의 고유 비율을 유지하기 때문에 설정에 따라 이미지의 일부가 보이지 않을 수 있습니다.<br>
@@ -219,7 +219,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">auto</strong> : 기본값으로 이미지 크기를 유지합니다.</li>
 				<li>
@@ -259,7 +259,7 @@
 	<!-- background-origin 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-origin</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			HTML 요소는 박스로 이루어져 있고, 바깥 여백 영역(Margin Area), 테두리 영역(Border Area), 안쪽 여백 영역(Padding Area), 내용 영역(Content Area)으로 구분합니다.<br>
 			background-origin으로 배경 이미지를 어느 영역부터 채워나갈지를 정합니다.<br>
 			background-origin 속성을 사용할 때 <code>background-attachment:fixed</code> 값은 무시됩니다.
@@ -271,7 +271,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">padding-box</strong> : 기본값으로 안쪽 여백 영역 왼쪽 위부터 채웁니다.</li>
 				<li><strong class="t_black">border-box</strong> : 테두리 영역 왼쪽 위부터 채웁니다.</li>
@@ -298,7 +298,7 @@
 	<!-- background-clip 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background-clip</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			배경 이미지나 배경색을 그 박스 중 어디에 넣을 지정하는 속성이 background-clip입니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="background-clip">
@@ -308,7 +308,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">border-box</strong> : 기본값으로 테두리 영역과 그 안쪽 영역을 채웁니다.</li>
 				<li><strong class="t_black">padding-box</strong> : 안쪽 여백 영역과 그 안쪽 영역을 채웁니다.</li>
@@ -335,7 +335,7 @@
 	<!-- background Shorthand 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">background Shorthand</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			색상, 이미지, 크기, 반복등 한 번에 모든 배경 스타일 속성을 축약형 방식으로 설정합니다.<br>
 			축약형 방식으로 사용하여 설정할 경우 콤마(,)로 구분하여 여러형식의 배경을 정의할 수 있습니다.
 		</p>
@@ -353,7 +353,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="background">
+	<aside class="browser_support mt_xxl" data-tit="background">
 		<ul>
 			<li class="ie">4+</li>
 			<li class="edge">12.0</li>
@@ -364,7 +364,7 @@
 		</ul>
 	</aside>
 
-	<section class="reference_box mt_l">
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">Background 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/colors.html#background" target="_blank" class="fas" title="새창열림">W3C Background</a></li>
