--- a/assets/02-css/02-cssBeginner/07-css_list.html
+++ b/assets/02-css/02-cssBeginner/07-css_list.html
@@ -21,7 +21,7 @@
 	<!-- list-style-type -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">list-style-type</i></h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			리스트 요소의 앞에 위치하는 숫자나 기호를 마커(marker)라고 합니다.<br>
 			리스트에 다양한 마커(marker)를 적용할 수 있습니다.<br>
 			미리 정의된 타입의 마커는 다양하게 있지만 모든 브라우저를 지원하지는 않습니다.<br>
@@ -96,7 +96,7 @@
 	<!-- list-style-image -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">list-style-image</i></h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			<code>list-style-image</code> 속성을 이용하면 마커(marker)로 자신만의 이미지를 사용할 수 있습니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="list-style-image">
@@ -116,7 +116,7 @@
 	<!-- list-style-position -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">list-style-position</i></h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			<code>list-style-position</code> 속성을 이용하면 리스트 요소의 위치를 설정할 수 있습니다.<br>
 			<code>list-style-position</code> 속성의 기본 속성값은 outside로 설정되어 있습니다.
 		</p>
@@ -137,7 +137,7 @@
 	<!-- list-style -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">list-style Shorthand</i></h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			모든 list-style 속성을 이용한 스타일을 한 줄에 축약형 방식으로 설정할 수 있음.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="list-style Shorthand">
@@ -154,7 +154,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="list-style">
+	<aside class="browser_support mt_xxl" data-tit="list-style">
 		<ul>
 			<li class="ie">4+</li>
 			<li class="edge">12.0</li>
@@ -165,7 +165,7 @@
 		</ul>
 	</aside>
 
-	<section class="reference_box mt_l">
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">List 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/CSS21/generate.html#propdef-list" target="_blank" class="fas" title="새창열림">W3C List</a></li>
