--- a/assets/02-css/02-cssBeginner/08-css_table.html
+++ b/assets/02-css/02-cssBeginner/08-css_table.html
@@ -21,7 +21,7 @@
 	</blockquote>
 
 	<!-- border 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">border</i> 속성</h2>
 		<p class="mt_s">
 			<code>border</code> 속성으로 테이블의 테두리(border)를 설정할 수 있습니다.<br>
@@ -55,7 +55,7 @@
 	</section>
 
 	<!-- border-collapse 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">border-collapse</i> 속성</h2>
 		<p class="mt_s">
 			<code>border-collapse</code> 속성값을 <code>collapse</code>로 설정하면 해당 테이블의 테두리는 한 줄로 표현됩니다.<br>
@@ -78,7 +78,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">collapse</strong> : 인접한 셀은 경계를 공유합니다 (축소 된 테두리 테이블 렌더링 모델).</li>
 				<li><strong class="t_black">separate</strong> : 인접한 셀은 서로 다른 경계 (분리 된 경계 테이블 렌더링 모델)를 갖습니다.</li>
@@ -87,7 +87,7 @@
 	</section>
 
 	<!-- border-spacing 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">border-spacing</i> 속성</h2>
 		<p class="mt_s">
 			<code>border-spacing</code> 속성은 테이블 요소(th, td)간의 여백을 설정해 줍니다.<br>
@@ -111,7 +111,7 @@
 	</section>
 
 	<!-- caption-side 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">caption-side</i> 속성</h2>
 		<p class="mt_s">
 			테이블의 캡션(caption)을 설정합니다.<br>
@@ -124,7 +124,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">top</strong> : 테이블 위에 위치.</li>
 				<li><strong class="t_black">bottom</strong> : 테이블 아래에 위치.</li>
@@ -140,7 +140,7 @@
 	</section>
 
 	<!-- vertical-align 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">vertical-align</i> 속성</h2>
 		<p class="mt_s">
 			HTML 요소 내의 수직 방향 정렬을 설정합니다.<br>
@@ -157,7 +157,7 @@
 	</section>
 
 	<!-- empty-cells 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">empty-cells</i> 속성</h2>
 		<p class="mt_s">
 			테이블 내의 빈 셀(cell)들의 테두리 및 배경색을 표현할지 안 할지를 설정합니다.<br>
@@ -172,7 +172,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">show</strong> : 테두리와 배경은 일반 셀처럼 그려집니다.</li>
 				<li><strong class="t_black">hide</strong> : 테두리 나 배경이 그려지지 않습니다.</li>
@@ -181,7 +181,7 @@
 	</section>
 
 	<!-- table-layout 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">table-layout</i> 속성</h2>
 		<p class="mt_s">
 			테이블에 사용되는 너비를 설정합니다.
@@ -193,7 +193,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">auto</strong> : 기본값으로 대부분의 브라우저는 자동 테이블 레이아웃 알고리즘을 사용합니다. 표와 셀의 너비는 내용에 맞게 조정됩니다.</li>
 				<li><strong class="t_black">fixed</strong> : 테이블 및 열 너비는 셀의 너비 table와 col요소 또는 첫 번째 행의 너비로 설정됩니다. 후속 행의 셀은 열 너비에 영향을 미치지 않습니다.</li>
@@ -201,14 +201,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="css/step01/2.8.table/2.8.table.html">
+	<section class="view_editor edit_code mt_xxl" data-target="css/step01/2.8.table/2.8.table.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="Table-style">
+	<aside class="browser_support mt_xxl" data-tit="Table-style">
 		<ul>
 			<li class="ie">5+</li>
 			<li class="edge">12.0</li>
@@ -219,7 +219,7 @@
 		</ul>
 	</aside>
 
-	<section class="reference_box mt_l">
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">Table 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/tables.html" target="_blank" class="fas" title="새창열림">W3C Table</a></li>
