--- a/assets/02-css/02-cssBeginner/02-css_selectors_level1.html
+++ b/assets/02-css/02-cssBeginner/02-css_selectors_level1.html
@@ -19,24 +19,24 @@
 	<!-- 2.2.1. CSS 선택자 우선순위 (specificity 계산) -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">2.2.1. CSS 선택자 우선순위 (specificity 계산)</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			더 특정적인 선택자가 더 일반적인 선택자보다 우선합니다. 가상 엘리먼트와 가장클래스들은 각각 일반적인 엘리먼트와 클래스와 같이 간주됩니다.<br>
 			3개의 숫자를 결합한 게 셀렉터의 상세도입니다. (large base의 숫자 시스템을 기반으로 합니다)<br>
 			CSS Selector의 조합에 따라서 셀렉터의 우선순위가 바뀔 수 있으며, 셀렉터의 우선순위를 잘 지정한다면 한 셀렉터를 다방면으로 효율적이게 활용할 수 있게 됩니다.<br>
 			부정 의사 클래스 안의 셀렉터도 다른 셀렉터와 동일하게 셉니다. 그러나, 부정 의사 클래스 자신은 의사 클래스로 세지 않습니다.
 		</p>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst mt_ml">
 			<strong class="font-16 t_black">셀렉터의 우선순위를 계산하는 방법은 아래와 같습니다.</strong>
-			<ol class="indent mt_sm">
+			<ol class="indent mt_s">
 				<li>셀렉터 중 ID 셀렉터의 갯수를 셉니다 (= a)</li>
 				<li>셀렉터 중 클래스 셀렉터, 속성 셀렉터, 의사(가상) 클래스의 갯수를 셉니다 (= b)</li>
 				<li>셀렉터 중 타입 셀렉터와 의사 요소의 갯수를 셉니다 (= c)</li>
 				<li>전역 셀렉터(가상 요소)는 무시합니다.</li>
 			</ol>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst mt_ml">
 			<strong class="font-16 t_black">기본적인 셀렉터 우선순위는 아래와 같습니다.</strong>
-			<ol class="indent mt_sm">
+			<ol class="indent mt_s">
 				<li>속성 값 뒤에 !important 를 붙인 속성</li>
 				<li>HTML에서 style을 직접 지정한 속성</li>
 				<li>#id 로 지정한 속성</li>
@@ -45,11 +45,9 @@
 				<li>상위 객체에 의해 상속된 속성</li>
 			</ol>
 		</div>
-		<p class="mt_s">
-			같은 우선 순위에 있는 경우, 부모-자식 관계가 많은 경우가 우선되며, 모든 설정이 같은 경우 나중에 선언한 것이 우선되어 적용됩니다.
-		</p>
-		<div class="css_specificity">
-			<div class="table_basic specificity1 mt_s">
+		<div class="css_specificity indent mt_ml">
+			<strong class="font-16 t_black ml_mn">같은 우선 순위에 있는 경우, 부모-자식 관계가 많은 경우가 우선되며, 모든 설정이 같은 경우 나중에 선언한 것이 우선되어 적용됩니다.</strong>
+			<div class="table_basic specificity1 mt_m">
 				<ul class="lst_bd">
 					<li>
 						<p class="cell tit">* {}</p>
@@ -193,36 +191,40 @@
 		</blockquote>
 
 		<!-- 2.2.2.1. 전체 선택자(Universal Selectors) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.2.1. 전체 선택자(Universal Selectors)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 2 선택자<br>
 				CSS를 적용할 대상으로 HTML 문서 내부의 모든 요소를 선택합니다. 별표(*)로 나타냅니다.<br>
 				별표는 간단한 선택기로 선택 사항입니다. 예를 들어, *.warning와 .warning 은 동일합니다.<br>
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="Universal Selectors">
-				<textarea readonly="readonly">
-					* {
-						/* style 작성 */
-					}
-				</textarea>
-			</div>
-			<p class="font-16 t_blue mt_m"><strong>* {}</strong></p>
-			<div class="ol_lst indent mt_s">
+			<div class="ol_lst">
 				<ol>
-					<li class="line_code font14">
-						<strong>기본 예시</strong>
-						<p>*{/* style 작성 */}</p>
-						<div class="view_editor edit_code mt_s" data-target="css/step01/2.2.selector/2.2.2.1.universal-selector.html">
+					<li class="line_code tit_h4 mt_m">
+						<h4>기본 예시</h4>
+						<div class="uk_gist_code_box mt_ms" data-tit="Universal Selectors">
+							<textarea readonly="readonly">
+								* {
+									/* style 작성 */
+								}
+							</textarea>
+						</div>
+						<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.2.1.universal-selector.html">
 							<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 								<div class="code_wrap"><textarea></textarea></div>
 							</div>
 						</div>
 					</li>
-					<li class="line_code font14 mt_m">
-						<strong>응용 예시</strong>
-						<p>*.warning{/* style 작성 */}</p>
-						<div class="view_editor edit_code mt_s" data-target="css/step01/2.2.selector/2.2.2.1.universal-selector2.html">
+					<li class="line_code tit_h4 mt_l">
+						<h4>응용 예시</h4>
+						<div class="uk_gist_code_box mt_ms" data-tit="Universal Selectors">
+							<textarea readonly="readonly">
+								*.warning {
+									/* style 작성 */
+								}
+							</textarea>
+						</div>
+						<div class="view_editor edit_code mt_m" data-target="css/step01/2.2.selector/2.2.2.1.universal-selector2.html">
 							<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 								<div class="code_wrap"><textarea></textarea></div>
 							</div>
@@ -230,7 +232,7 @@
 					</li>
 				</ol>
 			</div>
-			<aside class="browser_support indent mt_m" data-tit="Universal Selectors">
+			<aside class="browser_support mt_l" data-tit="Universal Selectors">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -243,9 +245,9 @@
 		</article>
 
 		<!-- 2.2.2.2. 타입 선택자(Type Selectors) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.2.2. 타입 선택자(Type Selectors)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 1 선택자<br>
 				타입 선택자(Type Selector)는 h1, p, div, span 등 HTML 요소(Element)를 선택하는 선택자입니다.<br>
 			</p>
@@ -274,9 +276,9 @@
 		</article>
 
 		<!-- 2.2.2.3. 아이디 선택자(ID Selectors) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.2.3. 아이디 선택자(ID Selectors)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 1 선택자<br>
 				아이디 선택자(ID Selector)는 특정 값을 id 속성(attribute)의 값으로 갖는 요소(element)를 선택합니다. 속성값 앞에 #을 붙여 아이디임을 나타냅니다.<br>
 			</p>
@@ -305,9 +307,9 @@
 		</article>
 
 		<!-- 2.2.2.4. 클래스 선택자(Class Selectors) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.2.4. 클래스 선택자(Class Selectors)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 1 선택자<br>
 				클래스 선택자(Class Selector)는 특정 값을 class 속성(attribute)의 값으로 갖는 요소(element)를 선택합니다. 속성값 앞에 .을 붙여 클래스임을 나타냅니다.<br>
 			</p>
@@ -345,7 +347,7 @@
 				그룹 선택자(Grouping selectors)는 모든 선택자를 콤마(,)로 조합하여 그룹으로 지어 작성할 수 있습니다.
 			</p>
 		</blockquote>
-		<div class="uk_gist_code_box mt_ms" data-tit="Grouping Selectors">
+		<div class="uk_gist_code_box mt_m" data-tit="Grouping Selectors">
 				<textarea readonly="readonly">
 					/* Element, Element, Element */
 					div, p, h1 {
@@ -377,7 +379,7 @@
 		<!-- 2.2.4.1. 하위 조합(Descendant combinator) or 하위 선택자) -->
 		<article class="indent mt_l">
 			<h3 class="ml_mn t_blue">2.2.4.1. 하위 조합(Descendant combinator) or 하위 선택자</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 1 선택자<br>
 				하위 조합 선택자는 특정 요소의 하위에 있는 요소를 선택합니다.<br>
 				하위 조합 콤비 네이터를 사용하는 선택기를 하위 선택자 라고 합니다.<br>
@@ -407,9 +409,9 @@
 		</article>
 
 		<!-- 2.2.4.2. 자식 연결자(Child combinator) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.4.2. 자식 연결자(Child combinator)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 2 선택자<br>
 				자식 연결자(Child Selector)는 특정 요소의 자식 요소를 선택합니다.<br>
 				첫 번째 요소와 일치하는 요소의 직접적인 하위 요소인 두 번째 선택자와 일치하는 요소만 일치합니다.<br>
@@ -441,9 +443,9 @@
 		</article>
 
 		<!-- 2.2.4.3. 인접한 형제 선택자(Adjacent sibling combinator) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.4.3. 인접한 형제 선택자(Adjacent sibling combinator)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 2 선택자<br>
 				형제(동위) 셀렉터는 형제 관계(동위 관계)에서 뒤에 위치하는 요소를 선택할 때 사용합니다.<br>
 				인접한 형제 선택자(Adjacent Sibling Selector)는 요소의 형제 요소 중 첫번째 형제 요소를 선택하며,<br>
@@ -497,7 +499,7 @@
 	<!-- 2.2.5. 속성 선택자(Attribute Selector) -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">2.2.5. 속성 선택자(Attribute Selector)</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			CSS Level 2 선택자<br>
 			CSS 속성 선택기는 주어진 속성의 존재 또는 값에 따라 요소를 일치시킵니다.<br>
 		</p>
@@ -570,9 +572,9 @@
 		<h2 class="ml_mn">2.2.6. 의사(가상) 클래스(Pseudo-classes)</h2>
 
 		<!-- 2.2.6.1. 링크 셀렉터(Link pseudo-classes), 동적 셀렉터(User action pseudo-classes) -->
-		<article class="indent mt_m">
+		<article class="indent mt_l">
 			<h3 class="ml_mn t_blue">2.2.6.1. 링크 셀렉터(Link pseudo-classes), 동적 셀렉터(User action pseudo-classes)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				선택자 뒤에 :가상이벤트를 붙이면 특정 이벤트마다 적용 할 스타일을 설정 할 수 있으며, 이를 가상 (추상)클래스라 합니다.<br>
 				CSS Level 1 선택자 - <code>E:link</code> / <code>E:visited</code><br>
 				CSS Level 1, 2 선택자 - <code>E:active</code> / <code>E:hover</code> / <code>E:focus</code><br>
@@ -590,35 +592,35 @@
 					a:focus { … }
 				</textarea>
 			</div>
-			<div class="mt_m">
+			<div class="mt_l">
 				<strong class="font-16 t_blue mt_m">:link</strong>
 				<p class="indent mt_s">
 					아직 방문하지 않은 요소를 나타냅니다.<br>
 					링크의 기본 상태이며, 사용자가 아직 한 번도 이 링크를 통해 연결된 페이지를 방문하지 않은 상태입니다.
 				</p>
 			</div>
-			<div class="mt_m">
+			<div class="mt_l">
 				<strong class="font-16 t_blue mt_m">:visited</strong>
 				<p class="indent mt_s">
 					방문한 링크일 때<br>
 					사용자가 한 번이라도 이 링크를 통해 연결된 페이지를 방문한 상태입니다.
 				</p>
 			</div>
-			<div class="mt_m">
+			<div class="mt_l">
 				<strong class="font-16 t_blue mt_m">:active</strong>
 				<p class="indent mt_s">
 					클릭된 상태일 때<br>
 					사용자가 마우스로 링크를 클릭하고 있는 상태입니다.
 				</p>
 			</div>
-			<div class="mt_m">
+			<div class="mt_l">
 				<strong class="font-16 t_blue mt_m">:hover</strong>
 				<p class="indent mt_s">
 					마우스가 올라와 있을 때<br>
 					사용자의 마우스 커서가 링크 위에 올라가 있는 상태입니다.
 				</p>
 			</div>
-			<div class="mt_m">
+			<div class="mt_l">
 				<strong class="font-16 t_blue mt_m">:focus</strong>
 				<p class="indent mt_s">
 					포커스가 들어와 있을 때<br>
@@ -644,7 +646,7 @@
 		</article>
 
 		<!-- 2.2.6.2. 구조적 의사(가상)클래스(Structural pseudo-class) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.6.2. 구조적 의사(가상)클래스(Structural pseudo-class)</h3>
 			<blockquote class="uk_note mt_m" role="note">
 				<h4 class="sound_only">요약 설명</h4>
@@ -683,9 +685,9 @@
 		</article>
 
 		<!-- 2.2.6.3. 언어 의사(가상) 클래스(The language pseudo-class) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">2.2.6.3. 언어 의사(가상) 클래스(The language pseudo-class)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Level 2 선택자<br>
 				language 의사 클래스는 문서의 언어를 기반으로 요소를 선택합니다.
 			</p>
@@ -717,6 +719,7 @@
 			</aside>
 		</article>
 	</section>
+
 
 	<section class="reference_box mt_l">
 		<h2 class="tit">CSS 선택자 level 1,2 참조</h2>
