--- a/assets/02-css/02-cssBeginner/05-css_text.html
+++ b/assets/02-css/02-cssBeginner/05-css_text.html
@@ -15,7 +15,7 @@
 	<!-- text-align 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">text-align</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			text-align 속성은 텍스트의 수평 방향 정렬을 설정합니다.<br>
 			text-align 속성으로 설정된 정렬 방향은 text-direction 속성과는 상관없이 우선적으로 적용됩니다.
 		</p>
@@ -26,7 +26,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">left</strong> : 박스의 왼쪽 정렬.</li>
 				<li><strong class="t_black">right</strong> : 박스의 오른쪽 정렬.</li>
@@ -54,7 +54,7 @@
 	<!-- vertical-align 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">vertical-align</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			HTML 요소 내의 인라인(inline)요소와 인라인 블럭(inline-block)요소의 수직 방향 정렬을 설정합니다.<br>
 			요소 자체만을 정렬하고, 내용에는 영향을 미치지 않습니다. (table cell에 적용할 때는 제외)<br>
 			table cell에 적용할 때는 내용에 영향을 미칩니다.<br>
@@ -118,7 +118,7 @@
 	<!-- letter-spacing 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">letter-spacing</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			letter-spacing 속성은 텍스트 내에서 글자 사이의 간격(자간)을 설정합니다.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="letter-spacing">
@@ -128,7 +128,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 현재 글꼴의 일반적인 문자 간격입니다.</li>
 				<li><strong class="t_black">length</strong> : 문자 사이의 기본 공백 외에 추가 문자 간 공백 을 지정 합니다. 값은 음수 일 수 있지만 구현 별 제한이있을 수 있습니다. 사용자 에이전트는 텍스트를 정당화하기 위해 문자 간 공간을 더 늘리거나 줄일 수 없습니다.</li>
@@ -154,7 +154,7 @@
 	<!-- word-spacing 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">word-spacing</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			word-spacing 속성은 텍스트 내에서 단어 사이의 간격을 설정합니다.<br>
 			letter-spacing 속성과는 달리 문자 간의 간격이 아닌 단어 간의 간격을 기준으로 설정합니다.<br>
 			참조 : 일부 스크린리더기에서는 양수 또는 음수 word-spacing값이 크면 스타일링이 적용된 문장을 읽을 수 없게됩니다.
@@ -166,7 +166,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 현재 글꼴 또는 브라우저에 의해 정의 된 일반적인 단어 간격입니다.</li>
 				<li><strong class="t_black">length</strong> : 글꼴로 정의 된 고유 한 단어 간 간격 외에 추가 간격을 지정합니다.</li>
@@ -192,7 +192,7 @@
 	<!-- word-break 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">word-break</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			단어의 분리(줄바꿈)를 어떻게 할 것인지 결정하는 속성입니다.<br>
 			줄바꿈을 할 때 단어 기준으로 할 지 글자 기준으로 할 지 정하는 속성입니다.<br>
 			반응형 웹디자인의 경우 가로 크기가 작을 때를 대비해서 word-break의 속성값을 break-all로 정하는 것이 좋습니다.<br>
@@ -247,7 +247,7 @@
 	<!-- word-wrap 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">word-wrap</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			박스의 가로 영역을 넘친 단어 내에서 임의의 분리 여부를 결정<br>
 			넘친 단어를 줄 바꿈 하고 싶다면, word-wrap 속성의 값을 바꾸면 됩니다.<br>
 			이때, 넘친 단어의 임의의 분리는 음절에서 발생하며 white-space 속성이 기본 값(normal) 일 때만 적용됩니다.<br>
@@ -255,8 +255,8 @@
 			줄바꿈을 할 때 word-break속성과 word-wrap속성을 같이 사용하면 좀 더 원하는 결과를 얻게 됩니다.
 		</p>
 		<ul class="dot_lst mt_s">
-			<li>예)줄바꿈을 글자 단위로 하면 word-wrap: break-word;word-break: break-all;</li>
-			<li>예)줄바꿈을 단어 단위로 하면 word-wrap: break-word;word-break: keep-all;</li>
+			<li>예)줄바꿈을 글자 단위로 하면 <code>word-wrap: break-word; word-break: break-all;</code></li>
+			<li>예)줄바꿈을 단어 단위로 하면 <code>word-wrap: break-word; word-break: keep-all;</code></li>
 		</ul>
 		<div class="uk_gist_code_box mt_ms" data-tit="word-wrap">
 			<textarea readonly="readonly">
@@ -265,7 +265,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 글자가 길어도 끊어지지 않고 한 줄에 계속 표시</li>
 				<li><strong class="t_black">break-word</strong> : 강제로 끊어서 줄바꿈 함</li>
@@ -291,7 +291,7 @@
 	<!-- white-space 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">white-space</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			HTML 요소 내의 여백을 설정함.
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="white-space">
@@ -301,7 +301,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 공백을 여러개 넣어도 공백 1개만 표시, 글이 길어지면 텍스트가 자동 줄바꿈 됨(wrap).</li>
 				<li><strong class="t_black">nowrap</strong> : 공백을 여러개 넣어도 1개만 표시, 텍스트가 길어도 줄바꿈 되지 않고 같은 줄에 계속 표시.</li>
@@ -330,7 +330,7 @@
 	<!-- text-indent 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">text-indent</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			text-indent 속성은 단락의 첫 줄에 들여쓰기할지 안 할지를 설정합니다.<br>
 			웹 페이지에서 단락은 기본적으로 들여쓰기가 설정되어 있지 않습니다.
 		</p>
@@ -341,7 +341,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">normal</strong> : 기본값으로 기본 공란을 재설정. 현재 글꼴 및 브라우저에 의해 정의 된 일반적인 단어 간격.</li>
 				<li><strong class="t_black">length</strong> : px, em, cm등으로 지정. (음수값 허용)</li>
@@ -368,7 +368,7 @@
 	<!-- text-decoration 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">text-decoration</i> 속성</h2>
-		<p class="mt_s reference">
+		<p class="mt_ms reference">
 			text-decoration 속성은 텍스트에 여러 가지 효과를 설정하거나 제거하는데 사용합니다.<br>
 			text-decoration 속성값을 none으로 설정하여 링크(link)가 설정된 텍스트의 밑줄을 제거하는데 자주 사용합니다.<br>
 			text-decoration 속성값은 <a href="https://drafts.csswg.org/css-text-decor-3/#text-decoration-line" target="_blank" title="새창열림">CSS Text Decoration Module Level 3 해당 사양에서 'text-decoration-line'으로 새롭게 정의</a>.
@@ -380,7 +380,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 기본값으로 밑줄이 없는 보통 글자.</li>
 				<li><strong class="t_black">underline</strong> : 글자 아래에 밑줄.</li>
@@ -408,7 +408,7 @@
 	<!-- text-transform 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">text-transform</i> 속성</h2>
-		<p class="mt_s reference">
+		<p class="mt_ms reference">
 			text-transform 속성은 텍스트에 포함된 영문자에 대한 대소문자를 설정합니다.<br>
 			이 속성은 텍스트에 포함된 모든 영문자를 대문자나 소문자로 변경시켜 줍니다.<br>
 			또한, 단어의 첫 문자만을 대문자로 변경시킬 수도 있습니다.<br>
@@ -421,7 +421,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 기본값으로, 텍스트를 html 코드에 있는 그대로 읽음.</li>
 				<li><strong class="t_black">capitalize</strong> : 각 단어의 첫 번째 문자를 대문자로 만듦. (예: Cascading Style Sheets.)</li>
@@ -449,7 +449,7 @@
 	<!-- text-overflow 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">text-overflow</i> 속성</h2>
-		<p class="mt_s reference">
+		<p class="mt_ms reference">
 			부모 영역을 벗어난 wrapping(자동줄바꿈)이 되지 않은 텍스트의 처리 방법을 정의합니다. 이 프로퍼티를 사용하기 위해서는 아래의 조건이 필요합니다.<br>
 			width 프로퍼티가 지정되어 있어야 한다. 이를 위해 필요할 경우 block 레벨 요소로 변경하여야 합니다.<br>
 			자동 줄바꿈을 방지하려면 white-space 프로퍼티를 nowrap으로 설정합니다.<br>
@@ -462,7 +462,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">clip</strong> : 영역을 벗어난 텍스트를 표시하지 않는다. (기본값)</li>
 				<li><strong class="t_black">ellipsis</strong> : 영역을 벗어난 텍스트를 잘라내어 보이지 않게 하고 말줄임표(…)를 표시한다.</li>
@@ -488,7 +488,7 @@
 	<!-- direction 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">direction</i> 속성</h2>
-		<p class="mt_s reference">
+		<p class="mt_ms reference">
 			direction 속성은 텍스트가 써지는 방향을 설정합니다.<br>
 			웹 페이지에서 텍스트는 기본적으로 왼쪽에서 오른쪽 방향으로 써집니다.<br>
 			direction 속성이 left-to-right(ltr)일 때는 기본 설정처럼 텍스트가 왼쪽에서 오른쪽 방향으로 써집니다.<br>
@@ -503,7 +503,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">ltr</strong> : 기본값으로 왼쪽에서 오른쪽으로 이동.</li>
 				<li><strong class="t_black">rtl</strong> : 오른쪽에서 왼쪽으로 이동.</li>
@@ -529,7 +529,7 @@
 	<!-- text-shadow 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">text-shadow</i> 속성</h2>
-		<p class="mt_s reference">
+		<p class="mt_ms reference">
 			text-shadow 속성은 텍스트에 그림자 효과를 설정합니다.<br>
 			text-shadow 속성은 쉼표(,)로 구분하여 여러 개의 텍스트 그림자를 적용 할 수 있습니다.
 		</p>
@@ -540,7 +540,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">none</strong> : 글림자 효과를 없앱니다.</li>
 				<li><strong class="t_black">initial</strong> : 기본값으로 설정합니다.</li>
@@ -568,7 +568,8 @@
 		</aside>
 	</section>
 
-	<section class="reference_box mt_l">
+
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">Text 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/CSS2/text.html" target="_blank" class="fas" title="새창열림">W3C Text</a></li>
